# ataridisk

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.json  setuptestdata.sh
.github/workflows/: rust.yml
data/: BIGFILE.TOM  TEST.TXT
src/: checksum.rs  config.rs  dos.rs  entries.rs  error.rs  fat.rs  layout.rs  lib.rs  main.rs  network.rs  state_machine.rs  storage.rs
